<resources>
    <string name="app_name">TTR-Rechner</string>
    <string name="app_start_name">myTTR-Rechner</string>
    <string name="action_settings">Einstellungen</string>
    <string name="ttbild">TT-Bild</string>
    <string name="gegner">Gegner</string>
    <string name="title_activity_ttr_constant">TTR-Konstante</string>
    <string name="title_activity_player_choose">Spieler auswählen</string>
    <string name="title_activity_ocr">Spieler auswählen</string>
    <string name="title_activity_licence">Lizenzen</string>
    <string name="hint_ttr_gegner">TTR-Pkt. Gegner</string>
    <string name="hint_meine_ttr_punkte">Meine TTR-Punkte</string>
    <string name="tab_suche_name">Name</string>
    <string name="tab_suche_kritierien">Kritieren</string>
    <string name="tab_suche_next_matches">Nächste Spiele</string>
    <string name="spieler_suche">Spielersuche</string>
    <string name="geburtsjahr_von">Geburtsjahr von</string>
    <string name="vereinsname">Vereinsname</string>
    <string name="ttr_punkte_von">TTR-Punkte von</string>
    <string name="bis">bis</string>
    <string name="alle">Alle</string>
    <string name="maennlich">Männlich</string>
    <string name="weiblich">Weiblich</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="hinzufuegen">Hinzufügen</string>
    <string name="suchen">Vorname Nachname oder Nachname, Vorname</string>
    <string name="leer">-</string>
    <string name="bild">Bild</string>
    <string name="neue_ttr_punkte">Neue TTR-Punkte:</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="zuruecksetzen">Zurücksetzen</string>
    <string name="verloren">Verloren</string>
    <string name="sieg">Sieg</string>
    <string name="loeschen">löschen</string>


    <string name="action_fast_search">Schnellsuche</string>
    <string name="action_add">Hinzufügen</string>
    <string name="action_ocr">Bilderkennung</string>
    <string name="action_detail_search">Detailsuche</string>
    <string name="action_ttr_constants">TTR-Konstante</string>
    <string name="action_mytischtennis_credentials">MyTischtennis-Account</string>
    <string name="title_mytischtennis_credentials">MyTischtennis Account</string>
    <string name="bitte_mit_vorname_nachname_suchen">Bitte mit \'Vorname Nachname\' suchen...</string>
    <string name="suche_laeuft">Suche läuft...</string>
    <string name="kamera">Kamera</string>
    <string name="album">Album</string>
</resources>
