<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ui.searchplayer.SearchWithNameFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/txtClubSearch"
            android:hint="@string/vereinsname"
            android:maxLines="1"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtVorname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vorname"
                android:maxLines="1"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtNachname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nachname"
                android:maxLines="1"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>