<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pnlAboveKeyBoard"
        android:fitsSystemWindows="true"
        tools:context="com.chivazo.chivazoandroid.activities.SingleProductActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimaryDark"
                app:expandedTitleMarginBottom="30dp"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tt"
                    android:contentDescription="@string/bild"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tt"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <include layout="@layout/ttrrechner_content_scrolling" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/pnlAboveKeyBoard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@android:color/transparent">

            <HorizontalScrollView
                android:id="@+id/horizontalButtonScrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="none"
                android:background="@color/colorPrimary">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:background="@android:color/transparent">

                    <Button
                        android:id="@+id/btnMyTischtennisCredentials"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_account_white_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/title_mytischtennis_credentials"
                        android:drawableTint="@color/black"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnTTRKonstant"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_math_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/title_activity_ttr_constant"
                        android:drawableTint="@color/black"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_reset_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/zuruecksetzen"
                        android:drawableTint="@color/black"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnOCR"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_search_camera_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/action_ocr"
                        android:drawableTint="@color/black"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnSearchDetailPlayers"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_search_detail_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/action_detail_search"
                        android:drawableTint="@color/black"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnSearchFastPlayers"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_search_fast_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/action_fast_search"
                        android:drawableTint="@color/black"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnAddMatch"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_shape"
                        android:drawableStart="@drawable/ic_add_user_96px"
                        android:drawablePadding="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:drawableTint="@color/black"
                        android:text="@string/hinzufuegen"
                        android:textSize="12sp" />
                </LinearLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="10dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/neue_ttr_punkte"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_gravity="bottom"
                    android:paddingBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/pnlPunkte"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:orientation="vertical"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:paddingBottom="6dp">

                        <TextView
                            android:id="@+id/txtDiffTTRPunkte"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-5dp"
                            android:layout_marginBottom="-5dp"
                            android:gravity="end"
                            android:paddingRight="4dp"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:text="@string/leer"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/txtNeueTTRPunkte"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/leer"
                            android:textColor="@android:color/white"
                            android:textSize="40sp"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnCalculatePoints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="8dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_equal_18" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>